# ai-framework-demos

./: LLM_ORACLE_ANALYSIS.md  README.md
p_equals_np/: README.md  __init__.py  benchmark_llm_oracle.py
p_equals_np/experimental/: __init__.py  llm_oracle_approach.py  oracle_scaling_experiment.py
p_equals_np/tests/: test_llm_oracle.py
py-knapsack/: .gitignore  README.md  console-log.txt  pyproject.toml
py-knapsack/.github/workflows/: ci.yml
py-knapsack/src/knapsack/: __init__.py  algorithms.py  exceptions.py  models.py  solver.py
py-knapsack/tests/: test_algorithms.py  test_benchmarks.py  test_models.py  test_properties.py  test_solver.py
